(lang dune 3.7)

(name DataStructures)

(generate_opam_files true)

(source
 (github bjrtx/data_structures))

(authors "bjrtx")

(maintainers "bjrtx")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name DataStructures)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune ppx_inline_test)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
